Fixed CSS issue with linebreaks in labels of the comment form.

--- a/com.alkacon.opencms.v8.comments/resources/system/modules/com.alkacon.opencms.v8.comments/resources/comments.css
+++ b/com.alkacon.opencms.v8.comments/resources/system/modules/com.alkacon.opencms.v8.comments/resources/comments.css
@@ -125,6 +125,7 @@ form.cmtForm div.webform_row label {
 	padding-right: 5px;
 	text-align: right;
 	width: 6em;
+	white-space: nowrap;
 }
 form.cmtForm div.webform_row input {
 	width: 300px;
